name:                sha256-bruteforce
version:             0.0.1
-- synopsis:            
-- description:      
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable sha256-bruteforce
  hs-source-dirs: src
  ghc-options: -O2 -Wall
  main-is: Main.hs
  other-modules:
    Bruteforce.Common
  build-depends:
    base >= 4.5.0,
    Crypto == 4.2.*

executable sha256-bruteforce-par
  hs-source-dirs: src
  ghc-options: -O2 -Wall -threaded
  main-is: MainPar.hs
  other-modules:
    Bruteforce.Common
  build-depends:
    base >= 4.5.0,
    Crypto == 4.2.*,
    deepseq == 1.3.*

executable sha256-bruteforce-truly-par
  hs-source-dirs: src
  ghc-options: -O2 -Wall -threaded -rtsopts
  main-is: MainTrulyPar.hs
  other-modules:
    Bruteforce.Common
  build-depends:
    base >= 4.5.0,
    Crypto == 4.2.*,
    deepseq == 1.3.*,
    parallel >= 3.2

executable sha256-bruteforce-stm
  hs-source-dirs: src
  ghc-options: -O2 -Wall -threaded
  main-is: MainStm.hs
  other-modules:
    Bruteforce.Common
  build-depends:
    base >= 4.5.0,
    stm == 2.4.*,
    Crypto == 4.2.*,
    deepseq == 1.3.*

executable stm-test
  hs-source-dirs: src
  ghc-options: -O2 -Wall -threaded
  main-is: StmTest.hs
  -- other-modules:
  build-depends:
    base >= 4.5.0,
    stm == 2.4.*
